# app_cyborgai_cli

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  RELEASE_TROUBLESHOOTING.md  install_gh.md  install_git_flow.md  install_pandoc.md  install_plantuml.md  install_rust.md  rust-toolchain.toml  rustfmt.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  performance.md  question.md
.github/workflows/: build_release.yml
.kiro/hooks/: rust-docs-sync.kiro.hook
.kiro/specs/ci-cd-rust-docker/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
app_cyborgai_cli/: Cargo.toml
app_cyborgai_cli/benches/: bench_app_cyborgai_cli.rs
app_cyborgai_cli/src/: main.rs
app_cyborgai_cli/tests/: test_app_cyborgai_cli.rs
documentation/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
documentation/doc/cyborgai_cli/: all.html  constant.EVO_VERSION.html  fn.main.html  index.html  sidebar-items.js
documentation/doc/search.desc/cyborgai_cli/: cyborgai_cli-desc-0-.js
documentation/doc/src/cyborgai_cli/: main.rs.html
scripts/: install.sh  issue_create.sh  run.sh  run_benches.sh  run_check_release_local.sh  run_dev.sh  run_documentation.sh  run_format_code.sh  run_git_push.sh  run_git_push_release.sh  run_issue_create.sh  run_issue_finish.sh  run_publish.sh  test_release_workflow.sh
scripts_release/: beta_release_workflow.sh  run_build_release.sh  run_build_release_local.sh  run_github_build_release.sh  setup_release_labels.sh
