#=======================================================================================================================
# CyborgAI
# CC BY-NC-ND 4.0 Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International
# github: https:#github.com/cyborg-ai-git
#=======================================================================================================================
[workspace]
resolver = "2"
members = [ "app_cyborgai_cli"]
#=======================================================================================================================
[workspace.package]
version = "2025.9.41944"
edition = "2024"
#=======================================================================================================================