#=======================================================================================================================
# CyborgAI
# CC BY-NC-ND 4.0 Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International
# github: https:#github.com/cyborg-ai-git
#=======================================================================================================================
[package]
name = "app_cyborgai_cli"
version.workspace = true
edition.workspace = true
default-run = "cyborgai_cli"
#=======================================================================================================================
[[bin]]
name = "cyborgai_cli"
path = "src/main.rs"
#=======================================================================================================================
[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
#-----------------------------------------------------------------------------------------------------------------------
[dependencies.evo_framework]
# <https://crates.io/>
version = "*"
# <https://github.com/>
git = "https://github.com/cyborg-ai-git/evo_framework.git"
#tag = "v*"
#-----------------------------------------------------------------------------------------------------------------------
[dependencies.evo_core_app_cli]
# <https://crates.io/>
version = "*"
# <https://github.com/>
git = "https://github.com/cyborg-ai-git/evo_core_app_cli.git"
#tag = "v*"
#=======================================================================================================================
#[dev-dependencies]
#criterion = { version = "0.7.0", features = ["html_reports", "async_tokio", "async_futures"] }
#=======================================================================================================================
#[[bench]]
#name = "bench_app_cyborgai_cli"
#harness = false
#=======================================================================================================================
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
#=======================================================================================================================
[package.metadata.docs.rs]
rustdoc-args = ["--cfg=web_sys_unstable_apis"]
cargo-args = ["--no-deps"]
#=======================================================================================================================